'style.css', styling the about/open book (menu_book) on the fixed footer to make the icon stand out a bit more, and work well with the text elements on either side of it (padding) when on different sized screens. Cleaned up 'flask_user_layout.html', removing commented text left from previous tests and Bootstrap 3 (using MaterializeCSS 1.0.0 instead). Remvoed the static entries to 'style.css' and 'materialize.js', replaced them with Jinja2 templates instead. Formatted all rlevant sections with a container class to align to the UX Design specs. Changed the colour to align to the UX Design colour scheme (more to do a litttle later). Changed image sizes on the fixed footer modal, to suit devices of all screen sizes. Cleaned up 'index.html', 'members.html', 'login.html', and 'register.html': url_for links, test text is removed, added breadcrumbs for improved navigation, and added the container class where needed.

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -43,8 +43,17 @@ footer {
     box-shadow: 0 -2px 0 rgba(0, 0, 0, 0.14), 0 -3px 1px 0 rgba(0, 0, 0, 0.12), 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-a i:hover {
-    transform: scale(1.5);
+#menu_book {
+    transform: scale(1.2);
+    padding: 0px 2px;
+}
+
+footer .left-align {
+    padding-left: 15%;
+}
+
+footer .right-align {
+    padding-right: 15%;
 }
 
 /* Modal Colour Schemes to match the Book Repository UX Design */
